# Daily-Standup-Discord-Bot

./: GOOGLE_SHEETS_SETUP.md  HEROKU_CREDENTIALS_SETUP.md  Procfile  README.md  TROUBLESHOOTING_HEROKU.md  database.py  main.py  message_parser.py  pyproject.toml  requirements.txt  scheduler.py  sheets_manager.py
