[project]
name = "daily-standup-discord-bot"
version = "1.0.0"
description = "Discord bot for automated daily standups"
requires-python = ">=3.8"
dependencies = [
    "discord.py>=2.3.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.0",
    "openai>=1.3.0",
    "pytz>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "*.py",
]

